# game-of-life

./: .gitignore  CMakeLists.txt  CellManager.cpp  CellManager.h  Cleanup.h  Coords.cpp  Coords.h  Drawer.cpp  Drawer.h  NoCopy.h  README.md  main.cpp
